# neural-net-rs

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
consumer_binary/: Cargo.toml
consumer_binary/src/: main.rs
docs/: PRD.md  app.js  architecture.md  plan.md  presentation-script.md  styles.css
docs/wasm/: neural_net_wasm_bg.wasm
matrix/: Cargo.toml
matrix/src/: macros.rs  matrix.rs
neural-net-cli/: Cargo.toml
neural-net-cli/src/: main.rs
neural-net-cli/tests/: cli_tests.rs  eval_tests.rs  info_tests.rs  progress_tests.rs  train_tests.rs
neural-net-server/: Cargo.toml
neural-net-server/src/: lib.rs
neural-net-server/static/wasm/: neural_net_wasm.d.ts  neural_net_wasm.js  neural_net_wasm_bg.wasm.d.ts  package.json
neural-net-server/tests/: api_tests.rs  sse_tests.rs
neural-network/: Cargo.toml
neural-network/src/: activations.rs  checkpoint.rs  examples.rs  lib.rs  network.rs  training.rs
neural-network/tests/: checkpoint_tests.rs  examples_tests.rs  resume_training_tests.rs  serialization_tests.rs  training_controller_tests.rs
tests/unit/: examples_tests.rs  mod.rs
