[package]
name = "neural-net-server"
version = "0.1.0"
edition = "2024"

[dependencies]
neural-network = { path = "../neural-network" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "neural-net-server"
path = "src/main.rs"
