[package]
name = "neural-network"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
matrix = {path = "../matrix"}
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
chrono = "0.4"